 - Created APIHandler for requesting JSON from Covid-19 API.
 - Parsed JSON data from Covid-19 API and filled RecyclerView with Country name, Confirmed Cases, Recovered Cases and Death Cases.
 > May 12th
 - Added wireframe design
 - Created text view to show date the data was last updated
 - Added circular progress bar
 > May 17th
 - Added recycler view search functionality
 - Removed static recycler view sizing (E.g. defined width (100dp) and height (50dp))
 > Summary (Written May 17th)
 - Second week of production and most of the functionality has been added. Definitely caught up and achieved the desired weekly milestone. Next week I will continue to work on the Statistics page by integrating the google maps API and comment on existing code.
# Week 3
 > May 20th
 - Added comments to code
 - Keyboard now closes after search button is pressed in search
 - Minor changes to StatisticActivity layout (Search view and Text View (for date) adjusted)
 - Date is altered to only show year-month-day (previously year-month-day-time)
 > May 21st
 - Refactored project to Androidx for Google Maps API capabilities
 - Added google maps activity
 - Created functionality where a country is shown in google maps when its button is clicked in the recycler view.
 > May 23rd
 - Added custom info box that displays country name and total cases
 - Added button that shows and hides the custom info box
 > Summary (Written May 24th)
 - This week every feature that has to do with covid-19 statistics is completed and some general tweaks to code were added for usability purposes. Next week will be focused on adding information and media. I hope to finish the first release of the project this week and use the last week for general editing and preparation for submission.
# Week 4
 > May 30th
 - Created info activity that has information about what COVID-19 is and how it spreads
 - Added YouTube API and added "What is Coronavirus (COVID-19)" video to info activity