@@ -15,6 +15,7 @@ public class MainActivity extends AppCompatActivity {
 
         Button statisticButton = findViewById(R.id.statisticsButton);
         Button informationButton = findViewById(R.id.informationButton);
+        Button safetyButton = findViewById(R.id.safetyButton);
         //Add onclick listener to start new activity
         statisticButton.setOnClickListener(new View.OnClickListener() {
             @Override
@@ -29,9 +30,20 @@ public class MainActivity extends AppCompatActivity {
         informationButton.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
+                //Create an intent for the InfoActivity
                Intent intent = new Intent(MainActivity.this, InfoActivity.class);
-
+                //Start InfoActivity
                MainActivity.this.startActivity(intent);
+            }
+        });
+
+        safetyButton.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                //Create an intent for the SafetyActivity
+                Intent intent = new Intent(MainActivity.this, SafetyActivity.class);
+                //Start SafetyActivity
+                MainActivity.this.startActivity(intent);
             }
         });
     }
