@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <solid android:color="#ffd5c0" />
+
+    <corners android:topLeftRadius="10dp"
+        android:bottomRightRadius="10dp"/>
+</shape>
