@@ -34,13 +34,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/aboutCovidTitle">
 
+        <com.google.android.youtube.player.YouTubePlayerView
+            android:id="@+id/youtubePlayer"
+            android:layout_width="380dp"
+            android:layout_height="204dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="#fff" />
+
         <TextView
             android:id="@+id/infoParagraph"
             android:layout_width="379dp"
             android:layout_height="0dp"
             android:layout_marginBottom="16dp"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/rounded_view"
             android:gravity="center"
             android:padding="10dp"
             android:text="@string/info_paragraph1"
@@ -54,24 +65,13 @@
             android:layout_height="0dp"
             android:layout_marginBottom="16dp"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/rounded_view"
             android:gravity="center"
             android:padding="10dp"
             android:text="@string/info_paragraph2"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
             android:textSize="18sp"
             android:textStyle="bold" />
-
-        <com.google.android.youtube.player.YouTubePlayerView
-            android:id="@+id/youtubePlayer"
-            android:layout_width="380dp"
-            android:layout_height="204dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="26dp"
-            android:background="#fff" />
 
     </LinearLayout>
 
